--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 }
 section{
     display: flex;
+    margin: 100px;
    
 }
 .divwidth{
@@ -33,4 +34,11 @@ section{
 } .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin: 0%;
+}
+.side-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
 }
